Fix for bug 138191 Description: Changing field focus with javascript and backspacing breaks tabbing patch by Gilbert.Fang@sun.com r=jkeiser, sr=bryner, a=asa